remove useless description files

--- a/Code/Tests/Test1.ipynb
+++ b/Code/Tests/Test1.ipynb
@@ -1891,14 +1891,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc05c145",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "be32582a",
    "metadata": {},
@@ -1970,35 +1962,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "id": "ca9061ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"../Data/model/lstm_volatility_model.keras\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "id": "d102e9db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import joblib"
+    "# model.save(\"../Data/model/lstm_volatility_model.keras\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e8d80cb",
+   "id": "d102e9db",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import joblib"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "bba995d0",
    "metadata": {},
    "outputs": [
@@ -2014,11 +1998,11 @@
     }
    ],
    "source": [
-    "joblib.dump(scaler_X, \"../Data/scaler/scaler_X_pre24.pkl\")\n",
-    "joblib.dump(scaler_X2, \"../Data/scaler/scaler_X2_post24.pkl\")\n",
+    "# joblib.dump(scaler_X, \"../Data/scaler/scaler_X_pre24.pkl\")\n",
+    "# joblib.dump(scaler_X2, \"../Data/scaler/scaler_X2_post24.pkl\")\n",
     "\n",
-    "joblib.dump(scaler_y, \"../Data/scaler/scaler_y_pre24.pkl\")\n",
-    "joblib.dump(scaler_y2, \"../Data/scaler/scaler_y2_post24.pkl\")"
+    "# joblib.dump(scaler_y, \"../Data/scaler/scaler_y_pre24.pkl\")\n",
+    "# joblib.dump(scaler_y2, \"../Data/scaler/scaler_y2_post24.pkl\")"
    ]
   }
  ],
